--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ body {
     background-position-x: -300px;
     background-color: rgba(0,0,0,0.5);
     background-blend-mode: darken;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow-y: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 /* HEADER */
@@ -34,8 +40,10 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 1150px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     animation: loading-animation 0.5s;
+    padding-top: 10px;
 }
 
 .logo {
@@ -137,4 +145,19 @@ body {
 .input-button:hover {
     cursor: pointer;
     background-color: #161616;
+}
+
+/* FOOTER */
+.footer {
+    display: flex;
+    justify-content: space-between;
+    width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    padding-bottom: 15px;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    padding-top: 10px;
+    color: rgba(255,255,255,0.5);
+    animation: loading-animation 0.5s 0.2s backwards;
 }
